fixing mobile alignment

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ body {
   justify-content: center;
   width: 100%;
   overflow-x: hidden;
-  min-width: 450px;
   min-height: 100vh;
 }
 
